; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_lz4.c_copy_literal.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_lz4.c_copy_literal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*, i32)* @copy_literal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @copy_literal(i32* %0, i32* noalias %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = load i32, i32* %6, align 4
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds i32, i32* %8, i64 %10
  store i32* %11, i32** %7, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = call i32 @copy16(i32* %12, i32* %13)
  %15 = load i32*, i32** %4, align 8
  %16 = getelementptr inbounds i32, i32* %15, i64 16
  store i32* %16, i32** %4, align 8
  %17 = load i32*, i32** %5, align 8
  %18 = getelementptr inbounds i32, i32* %17, i64 16
  store i32* %18, i32** %5, align 8
  br label %19

19:                                               ; preds = %23, %3
  %20 = load i32*, i32** %4, align 8
  %21 = load i32*, i32** %7, align 8
  %22 = icmp ult i32* %20, %21
  br i1 %22, label %23, label %31

23:                                               ; preds = %19
  %24 = load i32*, i32** %4, align 8
  %25 = load i32*, i32** %5, align 8
  %26 = call i32 @copy32(i32* %24, i32* %25)
  %27 = load i32*, i32** %4, align 8
  %28 = getelementptr inbounds i32, i32* %27, i64 32
  store i32* %28, i32** %4, align 8
  %29 = load i32*, i32** %5, align 8
  %30 = getelementptr inbounds i32, i32* %29, i64 32
  store i32* %30, i32** %5, align 8
  br label %19

31:                                               ; preds = %19
  %32 = load i32*, i32** %7, align 8
  ret i32* %32
}

declare dso_local i32 @copy16(i32*, i32*) #1

declare dso_local i32 @copy32(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
